Metadata and links

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/png" href="favicon.png"/>
+        <title>Jak zacząć programować?</title>
     </head>
     <body>
         <header>
@@ -63,7 +65,7 @@
                         <img src="assets/yt.png" alt="">
                         <h3>YouTube</h3>
                     </div>
-                    <p>Nasz <a target="_blank" href="http://youtube.com">kanał na YouTube</a> zawiera filmy, w których staramy się odpowiedzieć na pytania najczęściej zadawane przez osoby, które chcą zaprzyjaźnić się z programowaniem. Zasubksrybuj się do niego, aby nie ominąć żadnego filmiku!</p>
+                    <p>Nasz <a target="_blank" href="https://www.youtube.com/channel/UCF4jzVCa2J45NXnNtf6XBoA">kanał na YouTube</a> zawiera filmy, w których staramy się odpowiedzieć na pytania najczęściej zadawane przez osoby, które chcą zaprzyjaźnić się z programowaniem. Zasubksrybuj się do niego, aby nie ominąć żadnego filmiku!</p>
                 </div>
                 <div class="row">
                     <div class="row__bg">
@@ -72,13 +74,13 @@
                         <img class="rotate-medium row__bg__circle-3" src="assets/okrag.png" alt="">
                         <img class="move-v row__bg__ring-6" src="assets/pierscien.png" alt="">
                     </div>
-                    <p>Polub nasz <a target="_blank" href="http://youtube.com">fanpage na Facebooku</a>, weź udział w ankietach oraz dyskusjach. Dzięki temu będziesz mieć jeszce większy wpływ na to, co znajdzie sie w następnych filmikach!</p>
+                    <p>Polub nasz <a target="_blank" href="https://www.facebook.com/jakZaczacProgramowac">fanpage na Facebooku</a>, weź udział w ankietach oraz dyskusjach. Dzięki temu będziesz mieć jeszce większy wpływ na to, co znajdzie sie w następnych filmikach!</p>
                     <div class="row__col">
                         <img src="assets/fb.png" alt="">
                         <h3>Facebook</h3>
                     </div>
                 </div>
-                <div class="row row--img-left">
+                <div id="newsletter" class="row row--img-left">
                     <div class="row__bg">
                         <img class="move-h row__bg__waves-1" src="assets/fale.png" alt="">
                     </div>
