--- a/index.html
+++ b/index.html
@@ -1,136 +1,281 @@
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="icon" type="image/png" href="favicon.png"/>
-        <title>Jak zacząć programować?</title>
-    </head>
-    <body>
-        <header>
-            <div class="header__logotype">
-                <div class="header__logo">
-                    <img class="header__logo__bg" src="assets/logo-kreski.png" alt="">
-                    <img class="header__logo__question-mark" src="assets/logo-pytajnik.png" alt="">
-                </div>
-                <h1>
-                    Jak zacząć 
-                    <br>   
-                    programować<span class="blink">_</span>
-                </h1>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <title>Jak zacząć programować?</title>
+  </head>
+  <body>
+    <header>
+      <div class="header__logotype">
+        <div class="header__logo">
+          <img class="header__logo__bg" src="assets/logo-kreski.png" alt="" />
+          <img
+            class="header__logo__question-mark"
+            src="assets/logo-pytajnik.png"
+            alt=""
+          />
+        </div>
+        <h1>
+          Jak zacząć
+          <br />
+          programować<span class="blink">_</span>
+        </h1>
+      </div>
+
+      <div class="header__bg">
+        <img
+          class="move-v header__bg__ring-1"
+          src="assets/pierscien.png"
+          alt=""
+        />
+        <img
+          class="move-h header__bg__ring-3"
+          src="assets/pierscien.png"
+          alt=""
+        />
+        <img
+          class="rotate-fast header__bg__question-mark"
+          src="assets/pytajnik.png"
+          alt=""
+        />
+        <img class="header__bg__dots" src="assets/kropki-male.png" alt="" />
+        <img
+          class="move-v header__bg__button"
+          src="assets/klawisz.png"
+          alt=""
+        />
+        <img class="move-h header__bg__zigzag" src="assets/zygzak.png" alt="" />
+      </div>
+
+      <div class="header__guys">
+        <img
+          class="move-v header__guys__dots"
+          src="assets/kropki-duze.png"
+          alt=""
+        />
+        <img class="header__guys__left" src="assets/filip.png" alt="" />
+        <img class="move-h header__guys__waves" src="assets/fale.png" alt="" />
+        <img class="header__guys__right" src="assets/kacper.png" alt="" />
+      </div>
+    </header>
+    <main>
+      <section>
+        <h2>O nas</h2>
+        <div class="row">
+          <div class="row__bg">
+            <img
+              class="rotate-fast row__bg__circle-1"
+              src="assets/okrag.png"
+              alt=""
+            />
+            <img class="row__bg__dots-1" src="assets/kropki-male.png" alt="" />
+            <img
+              class="move-v row__bg__ring-4"
+              src="assets/pierscien.png"
+              alt=""
+            />
+            <img
+              class="move-h row__bg__ring-5"
+              src="assets/pierscien.png"
+              alt=""
+            />
+          </div>
+          <p>
+            <strong> "Jak zacząć programować"</strong> powstało z myślą o
+            osobach, które chcą postawić swoje pierwsze kroki w kodzeniu lub
+            dowiedzieć się więcej o pracy programisty i branży IT. W
+            materiałach, które tworzymy przekazujemy wiedzę i porady, które sami
+            chcielibyśmy usłyszeć na starcie naszej przygody z programowaniem.
+          </p>
+          <div class="row__col">
+            <img class="about-us__logo" src="assets/logo.jpg" alt="" />
+          </div>
+        </div>
+      </section>
+      <section>
+        <h2>Gdzie nas znajdziecie?</h2>
+        <div class="row row--img-left">
+          <div class="row__bg">
+            <img
+              class="move-h row__bg__dots-2"
+              src="assets/kropki-male.png"
+              alt=""
+            />
+            <img
+              class="move-v row__bg__button-1"
+              src="assets/klawisz.png"
+              alt=""
+            />
+          </div>
+          <div class="row__col">
+            <img src="assets/yt.png" alt="" />
+            <h3>YouTube</h3>
+          </div>
+          <p>
+            Nasz
+            <a
+              target="_blank"
+              href="https://www.youtube.com/channel/UCF4jzVCa2J45NXnNtf6XBoA"
+              >kanał na YouTube</a
+            >
+            zawiera filmy, w których staramy się odpowiedzieć na pytania
+            najczęściej zadawane przez osoby, które chcą zaprzyjaźnić się z
+            programowaniem. Zasubksrybuj się do niego, aby nie ominąć żadnego
+            filmiku!
+          </p>
+        </div>
+        <div class="row">
+          <div class="row__bg">
+            <img
+              class="move-h row__bg__dots-3"
+              src="assets/kropki-male.png"
+              alt=""
+            />
+
+            <img
+              class="rotate-medium row__bg__circle-3"
+              src="assets/okrag.png"
+              alt=""
+            />
+            <img
+              class="move-v row__bg__ring-6"
+              src="assets/pierscien.png"
+              alt=""
+            />
+          </div>
+          <p>
+            Polub nasz
+            <a
+              target="_blank"
+              href="https://www.facebook.com/jakZaczacProgramowac"
+              >fanpage na Facebooku</a
+            >, weź udział w ankietach oraz dyskusjach. Dzięki temu będziesz mieć
+            jeszce większy wpływ na to, co znajdzie sie w następnych filmikach!
+          </p>
+          <div class="row__col">
+            <img src="assets/fb.png" alt="" />
+            <h3>Facebook</h3>
+          </div>
+        </div>
+        <div id="newsletter" class="row row--img-left">
+          <div class="row__bg">
+            <img class="move-h row__bg__waves-1" src="assets/fale.png" alt="" />
+          </div>
+          <div class="row__col">
+            <img src="assets/mail.svg" alt="" />
+            <h3>Newsletter</h3>
+          </div>
+
+          <p>
+            Zapisz się na
+            <a
+              data-formkit-toggle="089649cbc0"
+              href="https://marvelous-thinker-6265.ck.page/089649cbc0"
+              >newsletter</a
+            >, aby regularnie otrzywać świeżą dawkę materiałów edukacyjnych.
+            Dzięki zapisaniu się poznasz również najważniejsze ogłoszenia i
+            plany dotyczące naszej inicjatywy!
+          </p>
+        </div>
+      </section>
+      <section>
+        <h2>Ekipa</h2>
+        <div class="row">
+          <div class="row__bg">
+            <img class="row__bg__dots-4" src="assets/kropki-male.png" alt="" />
+            <img
+              class="move-h row__bg__zigzag-2"
+              src="assets/zygzak.png"
+              alt=""
+            />
+            <img
+              class="move-v row__bg__ring-7"
+              src="assets/pierscien.png"
+              alt=""
+            />
+          </div>
+          <p>
+            Programuje od 15 roku życia, współtworzył krakowską społeczność
+            Meet.js i pracował zdalnie zanim to było modne. Istny człowiek
+            orkiestra, chociaż nie gra na żadnym instrumencie. Jak ma czas to
+            leży i odpoczywa. Jak nie ma to tylko leży.
+          </p>
+          <div class="row__col">
+            <div class="person__img person__img--kacper"></div>
+            <h3>Kacper</h3>
+            <div>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/kaapa/"
+                class="person__contact"
+                ><img src="assets/li-icon.svg" alt=""
+              /></a>
+              <a
+                target="_blank"
+                href="https://www.facebook.com/kacperSokolowski"
+                class="person__contact"
+                ><img src="assets/fb-icon.svg" alt=""
+              /></a>
             </div>
-
-            <div class="header__bg">
-                <img class="move-v header__bg__ring-1" src="assets/pierscien.png" alt="">
-                <img class="move-h header__bg__ring-3" src="assets/pierscien.png" alt="">
-                <img class="rotate-fast header__bg__question-mark" src="assets/pytajnik.png" alt="">
-                <img class="header__bg__dots" src="assets/kropki-male.png" alt="">
-                <img class="move-v header__bg__button" src="assets/klawisz.png" alt="">
-                <img class="move-h header__bg__zigzag" src="assets/zygzak.png" alt="">
+          </div>
+        </div>
+        <div class="row row--img-left">
+          <div class="row__bg">
+            <img
+              class="rotate-slow header__bg__circle-2"
+              src="assets/okrag.png"
+              alt=""
+            />
+            <img
+              class="move-h row__bg__button-2"
+              src="assets/klawisz.png"
+              alt=""
+            />
+            <img
+              class="move-h row__bg__ring-8"
+              src="assets/pierscien.png"
+              alt=""
+            />
+          </div>
+          <div class="row__col">
+            <div class="person__img person__img--filip"></div>
+            <h3>Filip</h3>
+            <div>
+              <a
+                target="_blank"
+                href="https://www.linkedin.com/in/filip-mamcarczyk-7a1b84b4/"
+                class="person__contact"
+                ><img src="assets/li-icon.svg" alt=""
+              /></a>
+              <a
+                target="_blank"
+                href="https://www.facebook.com/filip.mamcarczyk"
+                class="person__contact"
+                ><img src="assets/fb-icon.svg" alt=""
+              /></a>
             </div>
+          </div>
+          <p>
+            Kiedyś studiował budownictwo, ale jako przedstawiciel pokolenia
+            #yolo postanowił olać studia i nauczyć się programowania na własną
+            rękę. Udało mu się, dlatego niezwykle cieszy się, gdy może pomóc
+            innym początkującym. Od ponad 5 lat pracuje jako Frontend Developer.
+            W wolnych chwilach planszówkuje, czyta i biega - głównie na tramwaj
+            numer 52 albo wzdłóż Wisły.
+          </p>
+        </div>
+      </section>
+    </main>
 
-            <div class="header__guys">
-                <img class="move-v header__guys__dots" src="assets/kropki-duze.png" alt="">
-                <img class="header__guys__left" src="assets/filip.png" alt="">
-                <img class="move-h header__guys__waves" src="assets/fale.png" alt="">
-                <img class="header__guys__right" src="assets/kacper.png" alt="">
-            </div>                    
-        </header>
-        <main>
-            <section>
-                <h2>O nas</h2>
-                <div class="row">
-                    <div class="row__bg">
-                        <img class="rotate-fast row__bg__circle-1" src="assets/okrag.png" alt="">
-                        <img class="row__bg__dots-1" src="assets/kropki-male.png" alt="">
-                        <img class="move-v row__bg__ring-4" src="assets/pierscien.png" alt="">
-                        <img class="move-h row__bg__ring-5" src="assets/pierscien.png" alt="">
-                    </div>
-                    <p>
-                        <strong> "Jak zacząć programować"</strong> powstało z myślą o osobach, które chcą postawić swoje pierwsze kroki w kodzeniu lub dowiedzieć się więcej o pracy programisty i branży IT. W materiałach, które tworzymy przekazujemy wiedzę i porady, które sami chcielibyśmy usłyszeć na starcie naszej przygody z programowaniem.
-                    </p>
-                    <div class="row__col">
-                        <img class="about-us__logo" src="assets/logo.jpg" alt="">
-                    </div>
-                </div>
-            </section>
-            <section>
-                <h2>Gdzie nas znajdziecie?</h2>
-                <div class="row row--img-left">
-                    <div class="row__bg">
-                        <img class="move-h row__bg__dots-2" src="assets/kropki-male.png" alt="">
-                        <img class="move-v row__bg__button-1" src="assets/klawisz.png" alt="">
-                    </div>
-                    <div class="row__col">
-                        <img src="assets/yt.png" alt="">
-                        <h3>YouTube</h3>
-                    </div>
-                    <p>Nasz <a target="_blank" href="https://www.youtube.com/channel/UCF4jzVCa2J45NXnNtf6XBoA">kanał na YouTube</a> zawiera filmy, w których staramy się odpowiedzieć na pytania najczęściej zadawane przez osoby, które chcą zaprzyjaźnić się z programowaniem. Zasubksrybuj się do niego, aby nie ominąć żadnego filmiku!</p>
-                </div>
-                <div class="row">
-                    <div class="row__bg">
-                        <img class="move-h row__bg__dots-3" src="assets/kropki-male.png" alt="">
-
-                        <img class="rotate-medium row__bg__circle-3" src="assets/okrag.png" alt="">
-                        <img class="move-v row__bg__ring-6" src="assets/pierscien.png" alt="">
-                    </div>
-                    <p>Polub nasz <a target="_blank" href="https://www.facebook.com/jakZaczacProgramowac">fanpage na Facebooku</a>, weź udział w ankietach oraz dyskusjach. Dzięki temu będziesz mieć jeszce większy wpływ na to, co znajdzie sie w następnych filmikach!</p>
-                    <div class="row__col">
-                        <img src="assets/fb.png" alt="">
-                        <h3>Facebook</h3>
-                    </div>
-                </div>
-                <div id="newsletter" class="row row--img-left">
-                    <div class="row__bg">
-                        <img class="move-h row__bg__waves-1" src="assets/fale.png" alt="">
-                    </div>
-                    <div class="row__col">
-                        <img src="assets/mail.svg" alt="">
-                        <h3>Newsletter</h3>
-                    </div>
-                    <p>Zapisz się na <a target="_blank" href="http://youtube.com">newsletter</a>, aby regularnie otrzywać świeżą dawkę materiałów edukacyjnych. Dzięki zapisaniu się poznasz również najważniejsze ogłoszenia i plany dotyczące naszej inicjatywy!</p>
-                </div>
-            </section>
-            <section>
-                <h2>Ekipa</h2>
-                <div class="row">
-                    <div class="row__bg">
-                        <img class="row__bg__dots-4" src="assets/kropki-male.png" alt="">
-                        <img class="move-h row__bg__zigzag-2" src="assets/zygzak.png" alt="">
-                        <img class="move-v row__bg__ring-7" src="assets/pierscien.png" alt="">
-                    </div>
-                    <p>
-                        Programuje od 15 roku życia, współtworzył krakowską społeczność Meet.js i pracował zdalnie zanim to było modne. Istny człowiek orkiestra, chociaż nie gra na żadnym instrumencie. Jak ma czas to leży i odpoczywa. Jak nie ma to tylko leży.
-                    </p>
-                    <div class="row__col">
-                        <div class="person__img person__img--kacper"></div>
-                        <h3>Kacper</h3>
-                        <div>
-                            <a target="_blank" href="https://www.linkedin.com/in/kaapa/" class="person__contact"><img src="assets/li-icon.svg" alt=""></a>
-                            <a target="_blank" href="https://www.facebook.com/kacperSokolowski" class="person__contact"><img src="assets/fb-icon.svg" alt=""></a>
-                        </div>                         
-                    </div>
-                </div>
-                <div class="row row--img-left">
-                    <div class="row__bg">
-                        <img class="rotate-slow header__bg__circle-2" src="assets/okrag.png" alt="">
-                        <img class="move-h row__bg__button-2" src="assets/klawisz.png" alt="">
-                        <img class="move-h row__bg__ring-8" src="assets/pierscien.png" alt="">
-                    </div>
-                    <div class="row__col">
-                        <div class="person__img person__img--filip"></div>
-                        <h3>Filip</h3>
-                        <div>
-                            <a target="_blank" href="https://www.linkedin.com/in/filip-mamcarczyk-7a1b84b4/" class="person__contact"><img src="assets/li-icon.svg" alt=""></a>
-                            <a target="_blank" href="https://www.facebook.com/filip.mamcarczyk" class="person__contact"><img src="assets/fb-icon.svg" alt=""></a>
-                        </div>                 
-                    </div>
-                    <p>
-                       Kiedyś studiował budownictwo, ale jako przedstawiciel pokolenia #yolo postanowił olać studia i nauczyć się programowania na własną rękę. Udało mu się, dlatego niezwykle cieszy się, gdy może pomóc innym początkującym. Od ponad 5 lat pracuje jako Frontend Developer. W wolnych chwilach planszówkuje, czyta i biega - głównie na tramwaj numer 52 albo wzdłóż Wisły.
-                    </p>
-                </div>
-
-            </section>
-        </main>
-    </body>
+    <script
+      async
+      data-uid="089649cbc0"
+      src="https://marvelous-thinker-6265.ck.page/089649cbc0/index.js"
+    ></script>
+  </body>
 </html>
