--- a/index.html
+++ b/index.html
@@ -277,5 +277,19 @@
       data-uid="089649cbc0"
       src="https://marvelous-thinker-6265.ck.page/089649cbc0/index.js"
     ></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-172847126-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-172847126-1');
+    </script>
   </body>
 </html>
