--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             rękę. Udało mu się, dlatego niezwykle cieszy się, gdy może pomóc
             innym początkującym. Od ponad 5 lat pracuje jako Frontend Developer.
             W wolnych chwilach planszówkuje, czyta i biega - głównie na tramwaj
-            numer 52 albo wzdłóż Wisły.
+            numer 52 albo wzdłuż Wisły.
           </p>
         </div>
       </section>
