--- a/index.html
+++ b/index.html
@@ -202,8 +202,7 @@
           <p>
             Programuje od 15 roku życia, współtworzył krakowską społeczność
             Meet.js i pracował zdalnie zanim to było modne. Istny człowiek
-            orkiestra, chociaż nie gra na żadnym instrumencie. Jak ma czas to
-            leży i odpoczywa. Jak nie ma to tylko leży.
+            orkiestra, chociaż nie gra na żadnym instrumencie.
           </p>
           <div class="row__col">
             <div class="person__img person__img--kacper"></div>
