Add latest vid section

--- a/index.html
+++ b/index.html
@@ -269,6 +269,46 @@
           </p>
         </div>
       </section>
+      <section>
+        <h2>Najnowszy film</h2>
+        <div class="row">
+          <div class="row__bg">
+            <img class="row__bg__dots-3" src="assets/kropki-male.png" alt="" />
+            <img
+              class="move-v row__bg__zigzag-3"
+              src="assets/zygzak.png"
+              alt=""
+            />
+            <img
+              class="move-v row__bg__ring-9"
+              src="assets/pierscien.png"
+              alt=""
+            />
+            <img
+              class="move-h row__bg__dots-4"
+              src="assets/kropki-male.png"
+              alt=""
+            />
+            <img
+              class="move-h row__bg__button-3"
+              src="assets/klawisz.png"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="main-video-container">
+          <iframe  src="https://www.youtube.com/embed/R5FaS46guU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <h3>#7 - Dzień z życia programisty. Praca zdalna... z biura?</h3>
+        <br>
+        <p>Tym razem odwiedzimy Kacpra i pokażemy Wam dzień z życia programisty od kuchni.
+
+        Jak wygląda praca zdalna w międzynarodowej firmie?
+        Jakie są w niej zadania frontendowca?
+        Czym jest metoda pomidora?
+
+        Dowiecie się oglądając ten odcinek!</p>
+      </section>
     </main>
 
     <script
