--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         </div>
       </section>
       <section>
-        <h2>Najnowszy film</h2>
+        <h2>Najnowsze filmy</h2>
         <div class="row">
           <div class="row__bg">
             <img class="row__bg__dots-3" src="assets/kropki-male.png" alt="" />
@@ -294,8 +294,27 @@
               src="assets/klawisz.png"
               alt=""
             />
+            <img
+              class="move-h row__bg__button-4"
+              src="assets/klawisz.png"
+              alt=""
+            />
+            <img
+              class="move-h row__bg__dots-5"
+              src="assets/kropki-male.png"
+              alt=""
+            />
+            <img class="move-h row__bg__waves-2" src="assets/fale.png" alt="" />
           </div>
         </div>
+        <div class="main-video-container">
+          <iframe  src="https://www.youtube.com/embed/58etbJqMJR0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <h3>#8 - Moje błędy w nauce programowania</h3>
+        <br>
+        <p class="main-video-description">
+          Nauka programowania potrafi przysporzyć sporo problemów i dość łatwo jest popełnić błędy w tym procesie. W tym video opowiem o błędach, które popełniłem ja. Mam nadzieję, że dzięki temu Wy będziecie się ich wystrzegać :)
+        </p>
         <div class="main-video-container">
           <iframe  src="https://www.youtube.com/embed/R5FaS46guU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
