--- a/index.html
+++ b/index.html
@@ -308,6 +308,12 @@
           </div>
         </div>
         <div class="main-video-container">
+          <iframe  src="https://www.youtube.com/embed/bYBrM9LMG5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <h3>#10 - Popularne specjalizacje w programowaniu        </h3>
+        <br>
+        <p class="main-video-description">Aby móc rozpocząć karierę w IT, trzeba wiedzieć czym zajmują się programiści i programistki. W tym odcinku opisujemy najbardziej popularne specjalizacje w programowaniu, tak abyście mogli wybrać tą, która interesuje was najbardziej interesuje.</p>
+        <div class="main-video-container">
           <iframe  src="https://www.youtube.com/embed/58etbJqMJR0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <h3>#8 - Moje błędy w nauce programowania</h3>
@@ -315,18 +321,6 @@
         <p class="main-video-description">
           Nauka programowania potrafi przysporzyć sporo problemów i dość łatwo jest popełnić błędy w tym procesie. W tym video opowiem o błędach, które popełniłem ja. Mam nadzieję, że dzięki temu Wy będziecie się ich wystrzegać :)
         </p>
-        <div class="main-video-container">
-          <iframe  src="https://www.youtube.com/embed/R5FaS46guU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <h3>#7 - Dzień z życia programisty. Praca zdalna... z biura?</h3>
-        <br>
-        <p>Tym razem odwiedzimy Kacpra i pokażemy Wam dzień z życia programisty od kuchni.
-
-        Jak wygląda praca zdalna w międzynarodowej firmie?
-        Jakie są w niej zadania frontendowca?
-        Czym jest metoda pomidora?
-
-        Dowiecie się oglądając ten odcinek!</p>
       </section>
     </main>
 
