--- a/gdzie-szukac-pracy-w-it/index.html
+++ b/gdzie-szukac-pracy-w-it/index.html
@@ -7,7 +7,7 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <title>Jak zacząć programować?</title>
+    <title>Gdzie szukać pracy w IT?</title>
   </head>
   <body>
     <div class="bg">
@@ -65,6 +65,12 @@
         <h2>Grupy na Facebooku</h2>
       </section>
     </main>
+    <div class="bar-container">
+        <a class="bar" href="https://www.youtube.com/channel/UCF4jzVCa2J45NXnNtf6XBoA?sub_confirmation=1" target="_blank">
+            <p>Lista się przydała?</p>
+            <p>Kliknij tutaj, żeby subskrybować nasz kanał na YT i nie przegapić nowych materiałów!</p>
+        </a>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
