--- a/gdzie-szukac-pracy-w-it/index.html
+++ b/gdzie-szukac-pracy-w-it/index.html
@@ -11,54 +11,52 @@
   </head>
   <body>
     <div class="bg">
-        <img
-            class="rotate-slow row__bg__dots-1"
-            src="../assets/kropki-male.png"
-            alt=""
-        />
-        <img
-            class="move-h row__bg__button-1"
-            src="../assets/klawisz.png"
-            alt=""
-        />
-        <img
-            class="move-v row__bg__zigzag-1"
-            src="../assets/zygzak.png"
-            alt=""
-        />
-        <img
-            class="move-h row__bg__waves-1"
-            src="../assets/fale.png"
-            alt=""
-        />
+      <img
+        class="rotate-slow row__bg__dots-1"
+        src="../assets/kropki-male.png"
+        alt=""
+      />
+      <img
+        class="move-h row__bg__button-1"
+        src="../assets/klawisz.png"
+        alt=""
+      />
+      <img class="move-v row__bg__zigzag-1" src="../assets/zygzak.png" alt="" />
+      <img class="move-h row__bg__waves-1" src="../assets/fale.png" alt="" />
 
-        <img
-            class="rotate-slow row__bg__mark-1"
-            src="../assets/pytajnik.png"
-            alt=""
-        />
+      <img
+        class="rotate-slow row__bg__mark-1"
+        src="../assets/pytajnik.png"
+        alt=""
+      />
 
-        <img
-            class="rotate-slow row__bg__circle-1"
-            src="../assets/okrag.png"
-            alt=""
-        />
+      <img
+        class="rotate-slow row__bg__circle-1"
+        src="../assets/okrag.png"
+        alt=""
+      />
     </div>
     <header>
-        <a class="header__homepage-link" href="https://jakzaczacprogramowac.pl/">
-            <img src="../assets/logo-biale.png" alt="Strona główna">
-        </a>
-        <h1>Gdzie szukać pracy w IT?</h1>
-
+      <a class="header__homepage-link" href="https://jakzaczacprogramowac.pl/">
+        <img src="../assets/logo-biale.png" alt="Strona główna" />
+      </a>
+      <h1>Gdzie szukać pracy w IT?</h1>
     </header>
     <main>
-      <section>  
-        <p>Zapisz się na nasz <a target="_blank" href="https://jakzaczacprogramowac.pl#newsletter">newsletter</a>,  żeby dowiedzieć się o nowych pozycjach na liście!</p>
+      <section>
+        <p>
+          Zapisz się na nasz
+          <a
+            data-formkit-toggle="089649cbc0"
+            href="https://marvelous-thinker-6265.ck.page/089649cbc0"
+            >newsletter</a
+          >, żeby dowiedzieć się o nowych pozycjach na liście!
+        </p>
         <p>(Kolejność portali i grup na liście jest alfabetyczna)</p>
 
         <h2>Portale z ofertami pracy</h2>
         <div class="row">
-            <ul class="list list--portals"></ul>
+          <ul class="list list--portals"></ul>
         </div>
       </section>
       <section class="groups">
@@ -66,11 +64,38 @@
       </section>
     </main>
     <div class="bar-container">
-        <a class="bar" href="https://www.youtube.com/channel/UCF4jzVCa2J45NXnNtf6XBoA?sub_confirmation=1" target="_blank">
-            <p>Lista się przydała?</p>
-            <p>Kliknij tutaj, żeby subskrybować nasz kanał na YT i nie przegapić nowych materiałów!</p>
-        </a>
+      <a
+        class="bar"
+        href="https://www.youtube.com/channel/UCF4jzVCa2J45NXnNtf6XBoA?sub_confirmation=1"
+        target="_blank"
+      >
+        <p>Lista się przydała?</p>
+        <p>
+          Kliknij tutaj, żeby subskrybować nasz kanał na YT i nie przegapić
+          nowych materiałów!
+        </p>
+      </a>
     </div>
     <script src="app.js"></script>
+
+    <script
+      async
+      data-uid="089649cbc0"
+      src="https://marvelous-thinker-6265.ck.page/089649cbc0/index.js"
+    ></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-172847126-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
+
+      gtag('config', 'UA-172847126-1');
+    </script>
   </body>
 </html>
