--- a/index.html
+++ b/index.html
@@ -307,20 +307,12 @@
             <img class="move-h row__bg__waves-2" src="assets/fale.png" alt="" />
           </div>
         </div>
-        <div class="main-video-container">
-          <iframe  src="https://www.youtube.com/embed/bYBrM9LMG5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <h3>#9 - Popularne specjalizacje w programowaniu        </h3>
+        <h3>#12 - "Codzienność" IT okiem programisty        </h3>
         <br>
-        <p class="main-video-description">Aby móc rozpocząć karierę w IT, trzeba wiedzieć czym zajmują się programiści i programistki. W tym odcinku opisujemy najbardziej popularne specjalizacje w programowaniu, tak abyście mogli wybrać tą, która interesuje was najbardziej interesuje.</p>
+        <p class="main-video-description">Czy każda firma ma darmowe stołówki i stosy owoców? Czy zamiast pracować spędzamy cały dzień przy stole pingpongowym? Dowiedzmy się!</p>
         <div class="main-video-container">
-          <iframe  src="https://www.youtube.com/embed/58etbJqMJR0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe  src="https://www.youtube.com/embed/0yR5raNYmC0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
-        <h3>#8 - Moje błędy w nauce programowania</h3>
-        <br>
-        <p class="main-video-description">
-          Nauka programowania potrafi przysporzyć sporo problemów i dość łatwo jest popełnić błędy w tym procesie. W tym video opowiem o błędach, które popełniłem ja. Mam nadzieję, że dzięki temu Wy będziecie się ich wystrzegać :)
-        </p>
       </section>
     </main>
 
