--- a/index.html
+++ b/index.html
@@ -273,7 +273,6 @@
         <h2>Najnowsze filmy</h2>
         <div class="row">
           <div class="row__bg">
-            <img class="row__bg__dots-3" src="assets/kropki-male.png" alt="" />
             <img
               class="move-v row__bg__zigzag-3"
               src="assets/zygzak.png"
@@ -297,11 +296,14 @@
             <img class="move-h row__bg__waves-2" src="assets/fale.png" alt="" />
           </div>
         </div>
-        <h3>#12 - "Codzienność" IT okiem programisty        </h3>
+        <h3>#14 - Skąd języki programowania wzięły swoje nazwy?</h3>
         <br>
-        <p class="main-video-description">Czy każda firma ma darmowe stołówki i stosy owoców? Czy zamiast pracować spędzamy cały dzień przy stole pingpongowym? Dowiedzmy się!</p>
+        <p class="main-video-description">Czy zastanawialiście się kiedyś skąd wzięły się nazwy języków programowania? Dowiedzmy się!</p>
         <div class="main-video-container">
-          <iframe  src="https://www.youtube.com/embed/0yR5raNYmC0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe  src="https://www.youtube.com/embed/omoIm8PpPzE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="epiosdes">
+          
         </div>
       </section>
     </main>
@@ -325,5 +327,6 @@
 
       gtag('config', 'UA-172847126-1');
     </script>
+    <script src="app.js"></script>
   </body>
 </html>
