Oferty pracy z zagranicy

--- a/gdzie-szukac-pracy-w-it/index.html
+++ b/gdzie-szukac-pracy-w-it/index.html
@@ -59,8 +59,11 @@
           <ul class="list list--portals"></ul>
         </div>
       </section>
-      <section class="groups">
+      <section class="groups nested">
         <h2>Grupy na Facebooku</h2>
+      </section>
+      <section class="abroad nested">
+        <h2>Praca #zagranico</h2>
       </section>
     </main>
     <div class="bar-container">
