--- a/index.html
+++ b/index.html
@@ -296,11 +296,11 @@
             <img class="move-h row__bg__waves-2" src="assets/fale.png" alt="" />
           </div>
         </div>
-        <h3>#14 - Skąd języki programowania wzięły swoje nazwy?</h3>
+        <h3>#17 - Skąd brać wiedzę i motywację do nauki? Front-end</h3>
         <br>
-        <p class="main-video-description">Czy zastanawialiście się kiedyś skąd wzięły się nazwy języków programowania? Dowiedzmy się!</p>
+        <p class="main-video-description">W tym odcinku opowiadam o moich ulubionych, darmowych źródłach wiedzy o programowaniu. Pomagają mi one być cały czas na bieżąco z nowinkami branżowymi oraz podtrzymują moją motywację do dalszej nauki.</p>
         <div class="main-video-container">
-          <iframe  src="https://www.youtube.com/embed/omoIm8PpPzE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe  src="https://www.youtube.com/embed/Iqs6N1UZijs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="epiosdes">
           
