--- a/index.html
+++ b/index.html
@@ -182,6 +182,23 @@
             plany dotyczące naszej inicjatywy!
           </p>
         </div>
+        <div class="row row--img-right">
+          <div class="row__bg">
+            <img class="move-v row__bg__button-1" src="assets/klawisz.png" alt="" />
+          </div>
+          <p>
+            Dołącz do 
+            <a
+              href="https://www.facebook.com/groups/zaczynamy.programowac/"
+              target="_blank"
+              >społeczności na FB!</a
+            >. Będziemy dzielić się naszym doświadczeniem, wiedzą i ciekawymi linkami. Chcemy aby grupa stała się też miejscem, na którym bez obaw można zadać pytania, które nurtują chcących rozpocząć karierę w IT.
+          </p>  
+          <div class="row__col">
+            <img src="assets/people.png" alt="" />
+            <h3>Grupa na Facebooku</h3>
+          </div>        
+        </div>
       </section>
       <section>
         <h2>Ekipa</h2>
