--- a/index.html
+++ b/index.html
@@ -287,6 +287,14 @@
         </div>
       </section>
       <section>
+        <h2>Gdzie szukać pracy w IT?</h2>
+        <h3><a href="https://jakZaczacProgramowac.pl/gdzie-szukac-pracy-w-it" target="_blank">Sprawdź listę portali z ofertami pracy dla specjalistów IT!</a></p>
+        <br>
+        <div class="main-video-container">
+          <iframe  src="https://www.youtube.com/embed/2-09cjbaS8Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section>
         <h2>Najnowsze filmy</h2>
         <div class="row">
           <div class="row__bg">
