--- a/gdzie-szukac-pracy-w-it/index.html
+++ b/gdzie-szukac-pracy-w-it/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta property="og:description" content="Sprawdź najpopularniejsze portale z ofertami pracy w branży IT!" />
-    <meta property="og:image" content="https://i.ibb.co/jR4WPsj/gsp.png"/>
+    <meta property="og:image" content="https://i.ibb.co/Z8CdwMw/prezenty.png"/>
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
